# Cytopia

./: .gitignore  .gitmodules  CDashCI.cmake  CMakeLists.txt  CTestConfig.cmake  appveyor.yml  conanfile.txt.in  get_dependencies.sh  xmake.lua
.github/workflows/: build-game.yml  sonar-scan.yml  sonarcloud.yml
android/: .gitignore  BuildHelper.cmake  build.gradle  settings.gradle
android/Cytopia/: CMakeLists.txt  build.gradle
android/SDL2/: CMakeLists.txt  build.gradle
android/libnoise/: CMakeLists.txt  build.gradle
android/libogg/: CMakeLists.txt  build.gradle
android/libpng/: CMakeLists.txt  build.gradle
android/libvorbis/: CMakeLists.txt  build.gradle
android/openal/: CMakeLists.txt  build.gradle
android/zlib/: CMakeLists.txt  build.gradle
android/zlib/src/main/: AndroidManifest.xml
cmake/: cmakepp.cmake  fast-copy.cmake  vcpkg_android.cmake
src/: CMakeLists.txt  Game.cxx  Game.hxx  MainMenu.cxx  main.cxx
src/Scripting/: ScriptEngine.hxx
src/engine/: UIManager.cxx
src/engine/basics/: Settings.hxx
src/engine/map/: TerrainGenerator.cxx
src/engine/ui/basics/: UIElement.cxx  UIElement.hxx
tests/: CMakeLists.txt
tests/scripting/: ScriptEngine.cxx
tools/android-container/base/: Dockerfile  get_dependencies.sh
tools/android-container/base/files/Cytopia/: build.gradle
tools/android-container/base/files/SDL2/: build.gradle
tools/android-container/base/files/libnoise/: build.gradle
tools/android-container/base/files/libogg/: build.gradle
tools/android-container/base/files/libvorbis/: build.gradle
tools/android-container/base/files/openal-soft/: build.gradle
tools/android-container/base/files/zlib/: build.gradle
tools/itch/: .itch.toml.in
